# ftlman

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build_release.sh  flake.nix  rustfmt.toml  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
compare_with_slipstream/: .gitignore  compare.sh  download_multiverse.sh  download_slipstream.sh  google_drive_download.py  modman.cfg  patch.sh  patch_ftlman.sh  patch_slipstream.sh  patched_with_slipstream_hash
compare_with_slipstream/modsets/: ce.sh  dinos-hangar.sh  issue-6.sh  multiverse-with-c&c.sh  multiverse-with-forgemaster.sh  multiverse-with-trc.sh  multiverse.sh  pip.sh
compare_with_slipstream/normalize_xml/: Cargo.toml
compare_with_slipstream/normalize_xml/src/: main.rs
i18n/: en.ftl  missing_keys.py  pl.ftl
idl/: Cargo.toml  cargo_watch.sh  kramdown-template.html  kramdown_watch.sh
idl/src/: main.rs
lua/: .luarc.json  runner.sh  types.d.lua
lua/tests/: pretty.lua  util.lua  vfs.lua  xml.lua
speedy-xml/: Cargo.toml
speedy-xml/src/: escape.rs  lib.rs  lut.rs  reader.rs  writer.rs
src/: apply.rs  bps.rs  cache.rs  cli.rs  findftl.rs  fonts.rs  github.rs  i18n.rs  lazy.rs  lua.rs  main.rs  pathedit.rs  run_async.rs  scan.rs  trust.rs  update.rs  util.rs  validate.rs  xmltree.rs
src/append/: mod.rs  parse.rs
src/apply/: append.rs  doc.rs  lua.rs  mod.rs
src/apply/lua/: iterutil.lua  util.lua  xmltree.rs
src/findftl/: vdf.rs
src/gui/: ansi.rs  mod.rs  pathedit.rs  regexedit.rs  sandbox.rs  window.rs
src/hyperspace/: installer.rs  linux.rs  mod.rs  windows.rs
src/hyperspace/installer/: linux.rs  macos.rs  versions.rs  windows.rs
src/lua/: debug.lua  debug.rs  io.rs  iterutil.lua  meta.rs  table.lua  util.rs  xml.rs
src/patch/: graph.rs  mod.rs  paths.rs
src/trust/: keys.rs
src/util/: download.rs  gdrive.rs
src/validate/: xml.rs
src/xmltree/: builder.rs  dom.rs  emitter.rs
windows_gui_wrapper/: Cargo.toml
windows_gui_wrapper/src/: main.rs
