[package]
name = "ftlman"
version = "0.6.2"
edition = "2021"

[features]
portable-release = []

[dependencies]
env_logger = "0.11"
log = "0.4"

clap = { version = "4", features = ["derive"] }
eframe = { version = "0.31", features = ["persistence"] }
ureq = "2"
egui_dnd = "0.12"
dirs = "5"
anyhow = "1.0"
regex = "1"
regex-syntax = "0.8"
once_cell = "1"

parking_lot = "0.12"
poll-promise = { version = "0.3" }

# For BPS patches
crc32fast = "1"

# Used to read/write SIL archives and mod files/dirs
silpkg = "0.1.2"
# https://github.com/zip-rs/zip2/pull/306 introduced a dependency on system liblzma
# even though xz *decompression* worked fine without it previously via the `lzma-rs` crate...
zip = { git = "https://github.com/afishhh/zip2", branch = "no-xz" }
walkdir = "2"

# Used in cache.rs
tempfile = "3"

# Used for persisting state and deserializing mod metadata
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TODO: Replace with speedy-xml by implementing a serde deserializer
quick-xml = { version = "0.37", features = ["serialize"] }

speedy-xml = { path = "./speedy-xml" }

# These are dependencies of serde anyway
ryu = "1"
itoa = "1"

memchr = "2"

# For nice error diagnostics
annotate-snippets = "0.11.5"

# Localisation
fluent = "0.16"

# Used for dependency checking
semver = { version = "1", features = ["serde"] }

# Used in only one place, but other crates already pull it in
jiff = { version = "0.2" }

# This dependency could be removed but it's pretty small.
open = "5.3.1"
egui_extras = { version = "0.31", features = ["syntect"] }

mlua = { version = "0.10", features = ["lua54", "macros", "vendored", "error-send", "serialize"] }
gc-arena = "0.5.3"

# For decompressing updates, also used in silpkg and other dependencies
flate2 = "1"

# For unpacking updates for Linux and MacOS, at least seems pretty lightweight
tar = { version = "0.4", default-features = false }

# For loading system fonts on Linux
[target.'cfg(target_os = "linux")'.dependencies]
yeslogic-fontconfig-sys = "6"

# For loading system fonts and system language detection on Windows
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["dwrite", "winnls", "winbase", "errhandlingapi", "std"] }

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui" }
egui_extras = { git = "https://github.com/emilk/egui" }
eframe = { git = "https://github.com/emilk/egui" }

# Speeds up testing considerably
[profile.dev]
opt-level = 2

[profile.release]
strip = true
lto = "thin"

[profile.profiling]
inherits = "release"
strip = false
debug = true

[workspace]
members = ["compare_with_slipstream/normalize_xml", "speedy-xml", "windows_gui_wrapper"]
