[package]
name = "ftlman"
version = "0.7.1"
edition = "2024"

[features]
portable-release = []

[dependencies]
env_logger = "0.11"
log = "0.4"

clap = { version = "4", features = ["derive"] }
eframe = { version = "0.33", features = ["persistence"] }
ureq = "2"
egui_dnd = "0.14"
egui_extras = { version = "0.33", features = ["syntect"] }
dirs = "5"
anyhow = "1.0"
regex = "1"
regex-syntax = "0.8"
once_cell = "1"

parking_lot = "0.12"
poll-promise = { version = "0.3" }

# ring is already a dependency of ureq and allows us to compute hashes :)
ring = "0.17"

# For BPS patches
crc32fast = "1"

# Used to read/write SIL archives and mod files/dirs
silpkg = "0.1.4"
# https://github.com/zip-rs/zip2/pull/306 introduced a dependency on system liblzma
# even though xz *decompression* worked fine without it previously via the `lzma-rs` crate...
zip = { git = "https://github.com/afishhh/zip2", branch = "no-xz" }
walkdir = "2"

# Used in cache.rs
tempfile = "3"

# Used for persisting state and deserializing mod metadata
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TODO: Replace with speedy-xml by implementing a serde deserializer
quick-xml = { version = "0.37", features = ["serialize"] }

speedy-xml = { version = "0.1" }

# These are dependencies of serde anyway
ryu = "1"
itoa = "1"

memchr = "2"

# For nice error diagnostics
annotate-snippets = "0.12"

# Localisation
fluent = "0.16"

# Used for dependency checking
semver = { version = "1", features = ["serde"] }

# Used in only one place, but other crates already pull it in
jiff = { version = "0.2" }

# This dependency could be removed but it's pretty small.
open = "5.3.1"

mlua = { version = "0.10", features = ["lua54", "macros", "vendored", "error-send", "serialize"] }
gc-arena = "0.5.3"

# For decompressing updates, also used in silpkg and other dependencies
flate2 = "1"

# For unpacking updates for Linux and MacOS, at least seems pretty lightweight
tar = { version = "0.4", default-features = false }

# For loading system fonts on Linux
[target.'cfg(target_os = "linux")'.dependencies]
yeslogic-fontconfig-sys = "6"

# For loading system fonts and system language detection on Windows
# TODO: Switch to windows-rs
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["dwrite", "winnls", "winuser", "winbase", "errhandlingapi", "std"] }

# Speeds up testing considerably
[profile.dev]
opt-level = 2

[profile.release]
strip = true
lto = "thin"

[profile.profiling]
inherits = "release"
strip = false
debug = true

[patch.crates-io]
egui = { git = "https://github.com/afishhh/egui", rev = "f5d9f00117b3f8ff0af59924151fa2b9b584ce7d" }
eframe = { git = "https://github.com/afishhh/egui", rev = "f5d9f00117b3f8ff0af59924151fa2b9b584ce7d" }
epaint = { git = "https://github.com/afishhh/egui", rev = "f5d9f00117b3f8ff0af59924151fa2b9b584ce7d" }

[workspace]
members = ["compare_with_slipstream/normalize_xml"]
